# books-fastapi

./: .gitignore  Makefile  README.md  books.db  books_mcp.py  pyproject.toml
app/: database.py  main.py  routes.py  schemas.py  settings.py
migrations/: env.py
migrations/versions/: ae8204ac534d_initial_db.py
